# i3dr_titania-ros

./: .gitignore  .gitpod.Dockerfile  CMakeLists.txt  README.md  package.xml
.github/workflows/: ros-build.yml
calibration/: left.yaml
calibration/001/: left.yaml  right.yaml
calibration/002/: left.yaml  right.yaml
calibration/6465696d6f736i/: left.yaml  right.yaml
calibration/ideal/: left.yaml  right.yaml
cmake/: FindVimba.cmake  TargetArchitecture.cmake
include/: vimba_api.hpp
install/: i3dr_titania_https.rosinstall  i3dr_titania_ssh.rosinstall
launch/: pylon_capture.launch  single_pylon.launch  titania.launch  titania_capture.launch  titania_processing.launch  titania_sim.launch
mesh/: titania.stl
rviz/: titania.rviz
src/: vimba_api_node.cpp  vimba_list_cameras.cpp  vimba_list_cameras_node.cpp
urdf/: titania.urdf.xacro  titania_scene.urdf.xacro
vimba/: install.sh
worlds/: test.world
